--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <div class="box blue"></div>
             <div class="box red"></div>
             <div class="box green"></div>
+            <div class="box blue"></div>
+            <div class="box red"></div>
+            <div class="box green"></div>
 
         </main>
         <footer></footer>
